--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.9.0",
     "nuxt": "^3.7.4"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "v-calendar": "^3.1.1"
   }
 }
