--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.9.0",
-    "nuxt": "^3.7.4"
+    "happy-dom": "^12.9.1",
+    "nuxt": "^3.7.4",
+    "nuxt-vitest": "^0.11.0",
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
